--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@lexical/rich-text": "^0.31.2",
     "lexical": "^0.31.2",
     "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "slate": "^0.115.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.114.2",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.5"
   },
