--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lexical/react": "^0.31.2",
     "@lexical/rich-text": "^0.31.2",
+    "@tailwindcss/typography": "^0.5.16",
     "lexical": "^0.31.2",
     "next": "15.3.2",
     "react": "^19.1.0",
