--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@lexical/react": "^0.31.2",
     "@lexical/rich-text": "^0.31.2",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/typography": "^0.5.16",
     "lexical": "^0.31.2",
     "next": "15.3.2",
